//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null, default: 'USER']
  username String [unique, not null]
  hash String [unique, not null]
  status Status [not null, default: 'ONLINE']
  profile profiles
  channels channels
  message messages
  game games
  gameId Int
}

Table profiles {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bio String [not null, default: '']
  winCount Int [not null, default: 0]
  loseCount Int [not null, default: 0]
  profilePicture String [not null, default: './PLACEHOLDER.jpg']
  eloMatchMaking Int [not null, default: 1200]
  userId Int [unique, not null]
  user users [not null]
}

Table messages {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String
  senderId Int [unique, not null]
  sender users [not null]
  channelId Int [not null]
  Channel channels [not null]
}

Table channels {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ownerId Int [unique, not null]
  owner users [not null]
  password String
  messages messages [not null]
}

Table games {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  winner String
  looser String
  User users [not null]
}

Enum Role {
  USER
  ADMIN
}

Enum Status {
  ONLINE
  OFFLINE
  BUSY
  AFK
}

Ref: users.gameId > games.id

Ref: profiles.userId - users.id

Ref: messages.senderId - users.id

Ref: messages.channelId > channels.id

Ref: channels.ownerId - users.id